# libshp

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/libshp/: csocket.h  error.h  id_table.h  message.c  message.h  serial.h  server.h  thread_safe_queue.h
src/: csocket.c  id_table.c  message.c  serial.c  server.c  thread_safe_queue.c
tests/: CMakeLists.txt  test.c  unit.h
